--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "npm install"
   },
   "keywords": [],
   "author": "Your Name",
@@ -21,4 +22,5 @@
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
+  
 }
